# template-library-extentions

./: AGENTS.md  CMakeLists.txt  LICENSE  README.md  test.sh
cmake/: template-library-extensionsConfig.cmake.in
include/stlx/: shared_ptr.hpp  stlx.hpp  unique_ptr.hpp  vector.hpp
include/tlex/: shared_ptr.hpp  tlex.hpp  unique_ptr.hpp  vector.hpp
tests/: CMakeLists.txt  shared_ptr_test.cpp  unique_ptr_test.cpp  vector_test.cpp
